Update about me post and census 2014 migration post for spelling correction.

--- a/content/post/2020-06-01-myanmar-census-2014-migration-patterns-among-states-and-regions.Rmd
+++ b/content/post/2020-06-01-myanmar-census-2014-migration-patterns-among-states-and-regions.Rmd
@@ -29,9 +29,9 @@ library(gt)
 
 The latest [Myanmar population and household census](https://www.dop.gov.mm/en/population-censuses-myanmar) was conducted in March 2014 by the Ministry of Immigration and Population. It was the first national census since 1983. The aim was to count every person in the country on 29 March 2014 (census night) and to collect demographic, social, and economic data.  
 
-In this analysis, I looked at migration between states and regions in Myanmar. Myanmar is administratively divided into 7 states, 7 regions, one union territory, 5 self-administered zones, and one self-administered division. Data were available for states, regions, and the union territory.   
+In this analysis, I looked at migration between states and regions. Myanmar is administratively divided into 7 states, 7 regions, one union territory, 5 self-administered zones, and one self-administered division. Data were available for states, regions, and the union territory.   
 
-I used data from a table of aggregated numbers in which the state/region of usual residence was tabulated against previous residence or place of birth, segregated by sex. In addition, people were also asked the main reasons for the migration. These data were collected using a household questionnaire from almost 11 million conventional households. The data table (xlsx, 52 KB) is  [available](http://www.dop.gov.mm/sites/dop.gov.mm/files/datamap-documents/union_eng_group_c.xlsx) on the Ministry of Immigration and Population website. The main census report (pdf, 16 MB) can be downloaded [here](http://www.dop.gov.mm/sites/dop.gov.mm/files/publication_docs/census_main_report_union_-_english_2.pdf).  
+I used data from a table of aggregated numbers in which the state/region of usual residence was tabulated against previous residence or place of birth, segregated by sex. In addition, people were also asked the main reasons for migrating. These data were collected using a household questionnaire from almost 11 million conventional households. The data table (xlsx, 52 KB) is  [available](http://www.dop.gov.mm/sites/dop.gov.mm/files/datamap-documents/union_eng_group_c.xlsx) on the Ministry of Immigration and Population website. The main census report (pdf, 16 MB) can be downloaded [here](http://www.dop.gov.mm/sites/dop.gov.mm/files/publication_docs/census_main_report_union_-_english_2.pdf).  
 
 ## Network analysis
 
@@ -39,7 +39,7 @@ Migration was inferred if the previous residence or birth place (state/region) r
 
 Two networks were constructed: one for migrating from previous residence to usual residence, and another from birth place to usual residence. The former may be interpreted as recent migration patterns while the latter can be thought of as cumulative trend over longer time period although each interpretation has limitations.   
 
-Both networks were completed connected as population movements happened across all states/regions. To understand how connected the nodes are, I ranked them based on their reported population influx and outflow. In addition, I calculated *migratory flux* for each state/region, defined as the number of population inflow divided by outflow; a value of one means that the volume of migrant inflow and outflow are balanced. A value smaller than one means that there were more people moving out than moving in and vice versa if the value is greater than one.  
+Both networks were completely connected as population movements happened across all states/regions. To understand how connected the nodes are, I ranked them based on their reported population influx and outflow. In addition, I calculated *migratory flux* for each state/region, defined as the number of population inflow divided by outflow; a value of one means that the volume of migrant inflow and outflow are balanced. A value smaller than one means that there were more people moving out than moving in and vice versa if the value is greater than one.  
 
 Below are network representations in which I used circles and arrows to represent nodes and edges, respectively. The node size corresponds to their migratory flux values. The node colour represents the group the node belongs to based on a grouping algorithm (See below for more details). The edge width represents the volume of migrants and their colours are the same as the nodes they emerge from. For clarity, colours were added only to the edges that represents 50,000 or more migrants. All other edges were gray-ed.  
 
@@ -268,7 +268,7 @@ plot_grid(p, title, ncol = 1, rel_heights = c(1, 0.05))
 
 Migration patterns of both networks were very similar with almost identical main features. In both networks, Yangon received the highest volume of migrants from many states and region with most migrants moved from Ayeyawady and Bago regions. Top three states/regions with the highest influx of migrants were Yangon, Mandalay, and Shan while the top three with the highest outflow were Ayeyawady, Bago, and Mandalay. Migratory flux is highest in Yangon, Kayin, and Nay Pyi Taw and lowest in Ayeyawady, Chin, and Magway.  
 
-The migration patterns within each network were diverse. Yangon is the most populated region in the country and is where the commercial capital is located. With the highest migratory flux value, recent migration patterns show that Yangon Region has received migrants almost four times as many as its population outflow. Mandalay Region has one of the highest population both population inflow and outflow. With a migratory flux of approximately one, Mandalay Region has a very high population turnover.  I observed similar migration patterns between men and women when the data were analysed separately (results not shown).  
+The migration patterns within each network were diverse. Yangon is the most populated region in the country and is where the commercial capital is located. With the highest migratory flux value, recent migration patterns show that Yangon Region has received migrants almost four times as many as its population outflow. Mandalay Region has one of the highest in both population inflow and outflow. With a migratory flux of approximately one, Mandalay Region has a very high population turnover. I observed similar migration patterns between men and women when the data were analysed separately (results not shown).  
 
 The table below shows the number of migrants moving in and out of each state/region, sorted by the migratory flux.  
 
